--- a/src/main/bash/dnf/package/package.install.jdk.8
+++ b/src/main/bash/dnf/package/package.install.jdk.8
@@ -1,2 +1,2 @@
 #!/usr/bin/env bash
-run.and.show.if.failed "sudo dnf install -y java-1.8.0-openjdk-devel"
+sudo dnf install -y java-1.8.0-openjdk-devel
