Add missing license data #32
Signed-off-by: Mārtiņš Avots <martins.avots@splitcells.net>

--- a/src/main/bash/dnf/package/package.install.jdk.8
+++ b/src/main/bash/dnf/package/package.install.jdk.8
@@ -1,2 +1,4 @@
 #!/usr/bin/env bash
+# SPDX-License-Identifier: GPL-2.0
+# SPDX-FileCopyrightText: Contributors To The `net.splitcells.*` Projects
 sudo dnf install -y java-1.8.0-openjdk-devel
