--- a/src/main/bash/apt/package/package.install.jdk.8
+++ b/src/main/bash/apt/package/package.install.jdk.8
@@ -1,3 +1,5 @@
 #!/usr/bin/env bash
+# SPDX-License-Identifier: GPL-2.0
+# SPDX-FileCopyrightText: Contributors To The `net.splitcells.*` Projects
 # Worked on Ubuntu and may work in Debian.
 sudo apt install -y openjdk-8-jdk
